--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,32 +7,32 @@ jobs:
       matrix:
         include:
           # Linux config
-          - name: linux-amd64
-            runner: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            command: cargo
-          - name: linux-aarch64
-            runner: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            command: cross
+        #   - name: linux-amd64
+        #     runner: ubuntu-latest
+        #     target: x86_64-unknown-linux-gnu
+        #     command: cargo
+        #   - name: linux-aarch64
+        #     runner: ubuntu-latest
+        #     target: aarch64-unknown-linux-gnu
+        #     command: cross
 
           - name: macos-aarch64
             runner: macos-latest
             target: aarch64-apple-darwin
             command: cargo
-          - name: macos-amd64
-            runner: macos-latest
-            target: x86_64-apple-darwin
-            command: cargo
+        #   - name: macos-amd64
+        #     runner: macos-latest
+        #     target: x86_64-apple-darwin
+        #     command: cargo
 
-          - name: windows-amd64
-            runner: windows-latest
-            target: x86_64-pc-windows-msvc
-            command: cargo
-          - name: windows-aarch64
-            runner: windows-latest
-            target: aarch64-pc-windows-msvc
-            command: cargo
+        #   - name: windows-amd64
+        #     runner: windows-latest
+        #     target: x86_64-pc-windows-msvc
+        #     command: cargo
+        #   - name: windows-aarch64
+        #     runner: windows-latest
+        #     target: aarch64-pc-windows-msvc
+        #     command: cargo
  
     steps:
       - name: Checkout
@@ -56,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: libopaque_ke_cs_${{ matrix.name }}
-          path: target/${{ matrix.target }}/release/libopaque_ke_cs.{exe,so,dylib}
+          path: target/${{ matrix.target }}/release/libopaque_ke_cs.{dll,so,dylib}
