--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,34 +6,13 @@ jobs:
     strategy:
       matrix:
         include:
-          # Linux config
-        #   - name: linux-amd64
-        #     runner: ubuntu-latest
-        #     target: x86_64-unknown-linux-gnu
-        #     command: cargo
-        #   - name: linux-aarch64
-        #     runner: ubuntu-latest
-        #     target: aarch64-unknown-linux-gnu
-        #     command: cross
-
           - name: macos-aarch64
             runner: macos-latest
             target: aarch64-apple-darwin
             command: cargo
-        #   - name: macos-amd64
-        #     runner: macos-latest
-        #     target: x86_64-apple-darwin
-        #     command: cargo
+            output: libopaque_ke_cs.dylib
+            artifact: libopaque_ke_cs-darwin-aarch64.dylib
 
-        #   - name: windows-amd64
-        #     runner: windows-latest
-        #     target: x86_64-pc-windows-msvc
-        #     command: cargo
-        #   - name: windows-aarch64
-        #     runner: windows-latest
-        #     target: aarch64-pc-windows-msvc
-        #     command: cargo
- 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -55,5 +34,5 @@ jobs:
       - name: Upload Binary
         uses: actions/upload-artifact@v4
         with:
-          name: libopaque_ke_cs_${{ matrix.name }}
-          path: target/release/libopaque_ke_cs.{dll,so,dylib}
+          name: ${{ matrix.artifact }}
+          path: target/release/${{ matrix.output }}
