--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Upload Binary
         uses: actions/upload-artifact@v4
         with:
-          path: target/${{ matrix.target }}/release/${{ matrix.artifact }}
-          name: target/release/${{ matrix.output }}
+          path: target/${{ matrix.target }}/release/${{ matrix.output }}
+          name: ${{ matrix.artifact }}
